log
Wed, Mar 19, 2025  8:45:11 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:58:02 AM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, i);
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:47:9: error: unused variable 'elem' [-Werror=unused-variable]
    int *elem; //puntero a los elementos que guardaremos
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
58afaed
Wed, Mar 19, 2025  8:59:40 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:52:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, valor);
                   ^~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:47:9: error: unused variable 'elem' [-Werror=unused-variable]
    int *elem; //puntero a los elementos que guardaremos
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0869ae1
Wed, Mar 19, 2025  9:00:20 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:20: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
       int *valor = i + 1;
                    ^
exercises.c:47:9: error: unused variable 'elem' [-Werror=unused-variable]
    int *elem; //puntero a los elementos que guardaremos
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ed78e35
Wed, Mar 19, 2025  9:01:43 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8c388bd
Wed, Mar 19, 2025  9:05:24 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ea94bba
Wed, Mar 19, 2025  9:09:01 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:9: error: unused variable 'elem' [-Werror=unused-variable]
    int *elem; //puntero a los elementos que guardaremos
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e0c6d3c
Wed, Mar 19, 2025  9:09:55 AM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:9: error: unused variable 'num' [-Werror=unused-variable]
    int *num; //puntero a los elementos que guardaremos
         ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
57122b9
Wed, Mar 19, 2025  9:10:34 AM: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|5
total_score: 0/70
1f7c61b
Wed, Mar 19, 2025  9:11:37 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
bd84159
Wed, Mar 19, 2025 10:31:01 PM: 
 tests:  1|4
total_score: 10/70
49fd3d1
Wed, Mar 19, 2025 10:54:09 PM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
68d5b7c
Thu, Mar 20, 2025  1:58:29 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:19: error: comparison between pointer and integer [-Werror]
       if (eleList == elem){
                   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
e8e9be2
Thu, Mar 20, 2025  1:59:58 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
40a3741
Fri, Mar 21, 2025  6:23:09 PM: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
7156fd4
Fri, Mar 21, 2025  6:26:50 PM: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
4581ab6
Fri, Mar 21, 2025  6:31:21 PM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
2d99c41
Fri, Mar 21, 2025  6:39:14 PM: 
 exercises.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  4|1
total_score: 50/70
4cb7c96
Fri, Mar 21, 2025  6:57:30 PM: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push (pila, parentesis);
                      ^~~~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f49c5e
Fri, Mar 21, 2025  7:00:11 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
be6d59a
